<resources>
    <string name="app_name">Criminal</string>
    <string name="crime_title_label">Crime</string>
    <string name="crime_title_hint">Enter crime name</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="date_picker_title">Date of crime</string>
    <string name="time_picker_title">Time of crime</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="list_empty">List of crimes is empty</string>
    <string name="choose_suspect">Choose suspect</string>
    <string name="send_report">Send crime report</string>
    <string name="call_label">Make a call</string>
    <string name="call_hint">You must choose a suspect to make a call</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report_via">Send crime report via</string>
    <string name="imageview_description">Photo Image</string>
</resources>
